[tool.poetry]
name = "feud"
version = "1.0.0"
license = "MIT"
authors = ["Edwin Onuonga <ed@eonu.net>"]
maintainers = ["Edwin Onuonga <ed@eonu.net>"]
description = "Build powerful CLIs with simple idiomatic Python, driven by type hints. Not all arguments are bad."
readme = "README.md"
homepage = "https://github.com/eonu/feud"
repository = "https://github.com/eonu/feud"
documentation = "https://feud.readthedocs.io"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Terminals",
    "Typing :: Typed",

]
keywords = [
    "python",
    "cli",
    "terminal",
    "command-line",
    "typed",
    "docstrings",
    "typehints",
    "pydantic",
    "click",
]
packages = [{ include = "feud" }]
include = [
    "feud",
    "make",
    "tests",
    "CHANGELOG.md",
    "LICENSE",
    "Makefile",
    "pyproject.toml",
    "README.md",
    "tasks.py",
    "tox.ini",
]

[build-system]
requires = ['poetry-core~=1.0']
build-backend = 'poetry.core.masonry.api'

[tool.poetry.dependencies]
python = "^3.11"
packaging = "^24.0"
pydantic = "^2.0.3"
click = "^8.1.0"
docstring-parser = "^0.15"
Pydantic = { version = "^2.0.3", optional = true, extras = ["email"] }
rich-click = { version = "^1.6.1", optional = true }
# TODO: change to extras=["all"] (https://github.com/pydantic/pydantic-extra-types/issues/239)
pydantic-extra-types = { version = "^2.1.0", optional = true, extras = ["phonenumbers", "pycountry", "semver", "python_ulid"] }

[tool.poetry.extras]
rich = ["rich-click"]
email = ["email"]
extra-types = ["pydantic-extra-types"]
all = ["rich-click", "email", "pydantic-extra-types"]

[tool.poetry.group.base.dependencies]
invoke = "2.2.0"
tox = "4.11.3"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3"

[tool.poetry.group.lint.dependencies]
ruff = "0.1.3"
pydoclint = "0.3.8"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.4,<=7.2.6"
sphinx-autobuild = "^2021.3.14"
furo = "^2023.9.10"
numpydoc = "^1.6.0"
sphinx-favicon = "^1.0.1"
sphinx_design = "^0.5.0"
autodoc-pydantic = ">=2.0.0"

[tool.poetry.group.tests.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[tool.poetry.group.types.dependencies]
mypy = "1.14.0"

[tool.ruff]
required-version = "0.1.3"
select = [
    "F",    # pyflakes: https://pypi.org/project/pyflakes/
    "E",    # pycodestyle (error): https://pypi.org/project/pycodestyle/
    "W",    # pycodestyle (warning): https://pypi.org/project/pycodestyle/
    "I",    # isort: https://pypi.org/project/isort/
    "N",    # pep8-naming: https://pypi.org/project/pep8-naming/
    "D",    # pydocstyle: https://pypi.org/project/pydocstyle/
    "UP",   # pyupgrade: https://pypi.org/project/pyupgrade/
    "YTT",  # flake8-2020: https://pypi.org/project/flake8-2020/
    "ANN",  # flake8-annotations: https://pypi.org/project/flake8-annotations/
    "S",    # flake8-bandit: https://pypi.org/project/flake8-bandit/
    "BLE",  # flake8-blind-except: https://pypi.org/project/flake8-blind-except/
    "FBT",  # flake8-boolean-trap: https://pypi.org/project/flake8-boolean-trap/
    "B",    # flake8-bugbear: https://pypi.org/project/flake8-bugbear/
    "A",    # flake8-builtins: https://pypi.org/project/flake8-builtins/
    "COM",  # flake8-commas: https://pypi.org/project/flake8-commas/
    "C4",   # flake8-comprehensions: https://pypi.org/project/flake8-comprehensions/
    "T10",  # flake8-debugger: https://pypi.org/project/flake8-debugger/
    "EM",   # flake8-errmsg: https://pypi.org/project/flake8-errmsg/
    "FA",   # flake8-future-annotations: https://pypi.org/project/flake8-future-annotations/
    "ISC",  # flake8-implicit-str-concat: https://pypi.org/project/flake8-implicit-str-concat/
    "ICN",  # flake8-import-conventions: https://github.com/joaopalmeiro/flake8-import-conventions/
    "G",    # flake8-logging-format: https://pypi.org/project/flake8-logging-format/
    "INP",  # flake8-no-pep420: https://pypi.org/project/flake8-no-pep420/
    "PIE",  # flake8-pie: https://pypi.org/project/flake8-pie/
    "T20",  # flake8-print: https://pypi.org/project/flake8-print/
    "PT",   # flake8-pytest-style: https://pypi.org/project/flake8-pytest-style/
    "Q",    # flake8-quotes: https://pypi.org/project/flake8-quotes/
    "RSE",  # flake8-raise: https://pypi.org/project/flake8-raise/
    "RET",  # flake8-return: https://pypi.org/project/flake8-return/
    "SLF",  # flake8-self: https://pypi.org/project/flake8-self/
    "SIM",  # flake8-simplify: https://pypi.org/project/flake8-simplify/
    "TID",  # flake8-tidy-imports: https://pypi.org/project/flake8-tidy-imports/
    "ARG",  # flake8-unused-arguments: https://pypi.org/project/flake8-unused-arguments/
    "TD",   # flake8-todos: https://github.com/orsinium-labs/flake8-todos/
    "ERA",  # eradicate: https://pypi.org/project/eradicate/
    "PGH",  # pygrep-hooks: https://github.com/pre-commit/pygrep-hooks/
    "PL",   # pylint: https://pypi.org/project/pylint/
    "TRY",  # tryceratops: https://pypi.org/project/tryceratops/
    "FLY",  # flynt: https://pypi.org/project/flynt/
    "PERF", # perflint: https://pypi.org/project/perflint/
    "RUF",  # ruff
]
ignore = [
    "ANN401",  # https://beta.ruff.rs/docs/rules/any-type/
    "B905",    # https://beta.ruff.rs/docs/rules/zip-without-explicit-strict/
    "TD003",   # https://beta.ruff.rs/docs/rules/missing-todo-link/
    "PLR0913", # https://docs.astral.sh/ruff/rules/too-many-arguments/
    "PLR0912", # https://docs.astral.sh/ruff/rules/too-many-branches/
    "D205",    # 1 blank line required between summary line and description
    "PLR0911", # Too many return statements
    "PLR2004", # Magic value used in comparison, consider replacing * with a constant variable"
    "COM812",  # ruff format conflict
    "ISC001",  # ruff format conflict
    "ERA001",  # Found commented-out code
]
ignore-init-module-imports = true # allow unused imports in __init__.py
line-length = 79
typing-modules = ["feud.typing"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.extend-per-file-ignores]
"__init__.py" = ["PLC0414", "F403", "F401", "F405"]
"feud/typing/*.py" = ["PLC0414", "F403", "F401"]
"tests/**/*.py" = ["D100", "D100", "D101", "D102", "D103", "D104"]          # temporary
"tests/**/test_*.py" = ["ARG001", "S101", "D", "FA100", "FA102", "PLR0915"]

[tool.pydoclint]
style = "numpy"
exclude = ".git|.tox|feud/_internal|tests" # temporary
check-return-types = false
arg-type-hints-in-docstring = false
quiet = true

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
